# P1-A-Problem-that-solves-a-program

./: .gitignore  CMakeLists.txt  README.md  flake.nix  windtest.cellgrid
generator/: Pipfile  main.py  pyrightconfig.json  spinbox.py
src/: burnoutCell.c  burnoutCell.h  burnout_cell.c  burnout_cell.h  cell.c  cell.h  direct_spread.c  direct_spread.h  display.c  display.h  dyn_array.h  input.c  input.h  main.c  spotting_spread.c  spotting_spread.h
